# image-gen-mcp-server

./: .env.example  .env.test  .gitignore  HTTP_TRANSPORT_GUIDE.md  LICENSE  README.md  README.zh-CN.md  README_UPDATE_SUMMARY.md  example_client.py  http_transport.py  image_generation_tool.py  mcp-server  mcp_image_server.py  mcp_image_server_http.py  mcp_image_server_multi.py  mcp_image_server_unified.py  pyproject.toml  requirements.lock.txt  test_mcp_server.py  test_multi_api_client.py  test_server_simple.py  test_stdio_quick.py
api_providers/: base.py  doubao_provider.py  provider_manager.py
docs/: DEPLOYMENT_GUIDE.md  HTTP_TRANSPORT_GUIDE.md  MULTI_API_SUMMARY.md  README-multi-api.md  VSCODE_INTEGRATION.md
examples/: example_client.py  example_http_client.py  legacy_single_api_server.py
examples/web-design-demo/: index.html
examples/web-design-demo/css/: style.css
examples/web-design-demo/js/: main.js
multi-agent-demo/: README.md
multi-agent-demo/js/: script.js
src/mcp_image_server/: __init__.py  __main__.py  config.py  main.py
src/mcp_image_server/providers/: __init__.py  doubao_provider.py  hunyuan_provider.py  openai_provider.py  provider_manager.py
src/mcp_image_server/transports/: __init__.py  auth.py  http.py  http_server.py  session_manager.py  stdio.py  stdio_server.py
tests/: __init__.py  test_doubao_fallback_logic.py  test_http_image_urls.py  test_http_reload_config.py  test_http_server.py  test_hunyuan_provider_request_fields.py  test_hunyuan_provider_result_image.py  test_mcp_server.py  test_openai_provider_model_policy.py  test_provider_manager_config.py  test_stdio_simple.py  test_stdio_transport.py
web-design-demo/: README.md  README_ZH.md
